# ReferenceCode

./: .gitignore  .gitmodules  README.md
Bezier Curves/: ContainerBase.h  Coord.h  Mapping.h
Deprecated/Jason/: .gitignore  CMakeLists.txt  Makefile  README.md
Deprecated/Jason/jason-cli-old.xcodeproj/: project.pbxproj
Deprecated/Jason/jason-cli-old.xcodeproj/project.xcworkspace/xcuserdata/exdisj.xcuserdatad/: UserInterfaceState.xcuserstate
Deprecated/Jason/jason-cli-old.xcodeproj/xcuserdata/exdisj.xcuserdatad/xcschemes/: xcschememanagement.plist
Deprecated/Jason/src/: Entry.cpp  IOTester.cpp  IOTester.h  Testing.cpp  Testing.h
Deprecated/Jason/src/Calc/: CMakeLists.txt  Complex.cpp  Complex.h  Complex.tpp  Constraints.h  MathVector.cpp  MathVector.h  MathVectorT.tpp  Matrix.cpp  Matrix.h  MatrixT.tpp  Numerics.h  NumericsTester.cpp  NumericsTester.h  Scalar.cpp  Scalar.h  ScalarT.tpp  VariableType.cpp  VariableType.h
Deprecated/Jason/src/Commands/: CMakeLists.txt  CommandBase.cpp  CommandBase.h  CommandParser.cpp  CommandParser.h  CommandSpecifier.cpp  CommandSpecifier.h  CommandValue.cpp  CommandValue.h  JasonCommands.h
Deprecated/Jason/src/Commands/CommandsCode/: EvaluateCommand.cpp
Deprecated/Jason/src/Core/: BinaryUnit.cpp  BinaryUnit.h  BinaryUnit.tpp  CMakeLists.txt  Common.cpp  Common.h  DateTime.cpp  DateTime.h  Errors.cpp  Errors.h  FileHandle.h  Log.cpp  Log.h  Printing.cpp  Printing.h  Serialize.cpp  Serialize.h  Version.cpp  Version.h
Deprecated/Jason/src/Expressions/: CMakeLists.txt  Expression.cpp  Expression.h  ExpressionElement.h  Operator.cpp  Operator.h  SubExpression.cpp  SubExpression.h
Deprecated/Jason/src/Function/: CMakeLists.txt  Function.h  FunctionBase.cpp  FunctionBase.h  FunctionIterator.cpp  FunctionIterator.h  Goalmap.md
Deprecated/Jason/src/Function/Composite/: Polynomial.cpp  Polynomial.h  PolynomialT.tpp  RationalFunction.cpp  RationalFunction.h  RationalFunctionT.tpp
Deprecated/Jason/src/Function/Impls/: Bezier.cpp  Bezier.h  CoreFunctions.h  GeneralFunctions.cpp  GeneralFunctions.h  VectorFunction.cpp  VectorFunction.h  VectorFunctionT.tpp
Deprecated/Jason/src/Function/Impls/Core/: AbsoluteValue.cpp  Constant.cpp  Exponent.cpp  FnMonomial.cpp  Logarithm.cpp  Monomial.cpp  PFnMonomial.cpp  Trig.cpp
Deprecated/Jason/src/IO/: CMakeLists.txt  FileHandle.cpp  FileHandle.h  Package.cpp  Package.h  PackageEntry.cpp  PackageEntry.h  PackageEntryIndex.cpp  PackageEntryIndex.h  PackageEntryKey.cpp  PackageEntryKey.h  PackageHeader.cpp  PackageHeader.h  PackageIndex.cpp  PackageIndex.h  PackagePager.cpp  PackagePager.h  Remaining.md  Session.cpp  Session.h  UnloadedPackage.cpp  UnloadedPackage.h
School/CSP Final/: .gitignore  DataAna.py  FinalReport.docx  LICENSE.txt  README.md  SPIDAM.py  WaveData.py  WaveGrabber.py  WaveTool.py  controller.py  model.py  pyproject.toml  requirements.txt  setup.cfg  view.py
School/CSP Final/conf/: Configuration.py  Log.py  rt60data.txt
(+1293 files in other folders)
